# MegviiIDCard-Android

./: README.md
IDCardSdk/app/: build.gradle
IDCardSdk/app/jni/: Android.mk
IDCardSdk/app/src/main/: AndroidManifest.xml
IDCardSdk/app/src/main/res/drawable/: btn_backselect.xml
IDCardSdk/app/src/main/res/layout/: activity_loading.xml  activity_resutl.xml  idcardscan_layout.xml
IDCardSdk/app/src/main/res/menu/: main.xml
IDCardSdk/app/src/main/res/values/: strings.xml
IDCardSdk/gradle/wrapper/: gradle-wrapper.properties
MegFacepp-IDCard-Demo/: build.sh  local.properties
MegFacepp-IDCard-Demo/app/: build.gradle  proguard-rules.pro
MegFacepp-IDCard-Demo/app/libs/: idcard.aar
MegFacepp-IDCard-Demo/app/src/main/: AndroidManifest.xml
MegFacepp-IDCard-Demo/app/src/main/res/layout/: image_item.xml  (+2 more)
MegFacepp-IDCard-Demo/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
demo/: .gitignore  build.gradle
demo/src/main/res/drawable/: bg_buttongreen_select.xml
demo/src/main/res/layout/: activity_idcardaction.xml  activity_loading.xml  idcardscan_layout.xml  power_layout.xml
demo/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: CMakeLists.txt  com_megvii_idcard_Api.cpp  com_megvii_idcard_Api.h
sdk/src/main/cpp/include/: MG_IDCard.h
sdk/src/main/res/drawable/: btn_n.xml  btn_p.xml
sdk/src/main/res/raw/: megviiidcard_0_2_0_model  megviiidcard_0_3_0_model
(+39 files in other folders)
